deploy/infrastructure/gateway/manifests.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 192.168.1.202
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.lilalala.com'
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
    hostname: '*.lilalala.com'
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        name: wildcard-lilalala-tls
      mode: Terminate
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argo
spec:
  hostnames:
  - argo.lilalala.com
  parentRefs:
  - name: shared
    namespace: gateway
    sectionName: https
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
    timeouts:
      request: 0s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
  name: https-redirect
  namespace: gateway
spec:
  hostnames:
  - '*.lilalala.com'
  parentRefs:
  - name: shared
    namespace: gateway
    sectionName: http
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
